updated index.html and nginx

--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -33,28 +33,19 @@ http {
 
     server {
        listen 80;
-       server_name picasso.home.lan;
+       server_name picasso.igny;
 
        location / {
-          proxy_pass http://home:3000;
+          proxy_pass http://home.igny:3000;
       }
     }
 
     server {
        listen 80;
-       server_name docker.home.lan;
+       server_name gigue.igny;
 
        location / {
-          proxy_pass http://home:4000;
-      }
-    }
-
-    server {
-       listen 80;
-       server_name gigue.home.lan;
-
-       location / {
-          proxy_pass http://home:8080;
+          proxy_pass http://home.igny:8080;
       }
     }
 
@@ -74,10 +65,10 @@ http {
 
     server {
        listen 80;
-       server_name nestor.home.lan;
+       server_name nestor.igny;
 
        location / {
-          proxy_pass http://home:1880;
+          proxy_pass http://home.igny:1880;
           proxy_http_version 1.1;
           proxy_set_header Upgrade $http_upgrade;
           proxy_set_header Connection $connection_upgrade;
